changed chart two

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
 
 <div class="chart" id="secondChart">
   <script>
-    var myChart1 = "chart1_covidUKRegions.json";
+    var myChart1 = "BankRate.json";
     vegaEmbed('#secondChart', myChart1);
   </script>
 </div>
+    
+
     
 </body>
 
