--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <h3>Covid-19</h3>
 
-    <p>The first chart tracks Covid-19 cases by UK region.</p>
+    <p>The first chart tracks Covid-19 cases by UK region. This is where I will store my work.</p>
 
 <!--Vaga embed, with notes for what is going on-->
 <div class="chart" id="firstChart">
