--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
 <div class="chart" id="thirdChart">
   <script>
-    var myChart3 = "BankRate.json";
+    var myChart3 = "CovidCitiesAPI.json";
     vegaEmbed('#secondChart', myChart3);
   </script>
 </div>
