--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
 <div class="chart" id="fourthChart">
   <script>
-    var myChart4 = "BankRate.json";
+    var myChart4 = "CovidCitiesStatic.json";
     vegaEmbed('#secondChart', myChart4);
   </script>
 </div>
