--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="chart" id="thirdChart">
   <script>
     var myChart3 = "CovidCitiesAPI.json";
-    vegaEmbed('#secondChart', myChart3);
+    vegaEmbed('#thirdChart', myChart3);
   </script>
 </div>
     
@@ -73,7 +73,7 @@
 <div class="chart" id="fourthChart">
   <script>
     var myChart4 = "CovidCitiesStatic.json";
-    vegaEmbed('#secondChart', myChart4);
+    vegaEmbed('#fourthChart', myChart4);
   </script>
 </div>
     
