--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CM Data Demo Page</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="pppindex.css">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
