--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
     <link rel="stylesheet" href="pppindex.css">
 
-    <pstyle>
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-    </pstyle>
+    </style>
+    
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+    </style>
 
     <!--The next three lines allow the Vega embed-->
 <script src="https://cdn.jsdelivr.net/npm/vega@5.17.0"></script>
