--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
 <body>
 
     <h1>Data Science 2021.</h1>
+    
+    <div class="wrap">
+    <p class="rubric-launch">Data Science students: To see a sample project page set up, click <a class="textLink" href="project"> here</a>.</p> 
+    </div>
 
-    <h3>Covid-19</h3>
+    <h3>Portfolio</p>
+    
 
     <p>The first chart tracks Covid-19 cases by UK region. This is where I will store my work.</p>
 
