--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </script>
 </div>
     
- <p>This is my fourth chart, running from the UK Gov API.>
+ <p>This is my fourth chart, running from the UK Gov API.</p>
     
 <div class="chart" id="fourthChart">
   <script>
