--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CM DataViz Project Demo Page</title>
 
-    <link rel="stylesheet" href= "pppindex.css">
+    <link rel="stylesheet" href= "index.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         </style>
